--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -64,6 +64,7 @@ If a digitally signed message is encrypted, the receiver can verify the originat
 Thus, combining public key encryption with digital signatures can also ensure the confidentiality, authenticity, and integrity of exchanged messages.~\cite{An2002}
 
 \section{JSON Object Signing and Encryption}
+\label{sec:jose}
 JSON Object Signing and Encryption (JOSE) is a collection of standards defined by IETF~\cite{Barnes2014}.
 It was created because traditional channel-based encryption layers (such as IPsec~\cite{IPSEC2011} or TLS~\cite{TLS2018}) only protect data between intermediate servers.
 However, those layers of encryption do not protect the data from the intermediate servers itself.
