--- a/literature.bib
+++ b/literature.bib
@@ -673,6 +673,14 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   eprint = {https://www.rfc-editor.org/rfc/rfc8551},
 }
 
+@Book{Barker2006,
+  author    = {Barker, Elaine and Barker, Elaine and Burr, William and Polk, William and Smid, Miles and others},
+  publisher = {National Institute of Standards and Technology, Technology Administration~…},
+  title     = {Recommendation for key management: Part 1: General},
+  year      = {2006},
+  eprint    = {https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-57pt1r5.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
