--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -7,14 +7,14 @@
 \label{chap:design}
 
 This chapter describes and justifies the protocol designed in the context of this thesis.
-The main purpose of the protocol is the secure encryption of logs in the toolchain while adding the possibility to share them.
-In the previous chapter \ref{chap:overview}, possible encryption strategies were introduced and evaluated based on the identified system requirements (see chapter \ref{chap:requirements}).
+The main purpose of the protocol is to share encrypted logs with multiple parties.
+In the previous \cref{chap:overview}, possible encryption strategies were introduced and evaluated based on the identified system requirements (see \cref{chap:requirements}).
 Hybrid encryption was identified as the most promising encryption technique.
-The evaluation of the protocol in terms of functionality, security, and performance can be found in chapter~\ref{chap:evaluation}.
+The evaluation of the protocol in terms of functionality, security, and performance can be found in \cref{chap:evaluation}.
 
-A high-level overview of the designed protocol can be found in section~\ref{sec:overview}.
-Section~\ref{sec:protocol-considerations} reflects different design considerations for the protocol.
-The imposed algorithms to create, encrypt and decrypt logs are explained in the subsequent sections. 
+A high-level overview of the designed protocol can be found in \cref{sec:overview}.
+Different design considerations for the protocol are discussed in \cref{sec:protocol-considerations}.
+The imposed algorithms to create, encrypt, and decrypt logs are explained in the subsequent sections. 
 
 \section{Protocol overview}
 \label{sec:overview}
@@ -28,19 +28,19 @@ The first key pair is dedicated to encrypting data.
 Its public key is called the encryption key while its private key is called the decryption key.
 The second key pair is intended to sign data.
 Its public key is called the verification key while its private key is called the signing key.
-Public keys are represented by a PEM-encoded certificate which is signed by a trusted CA.
+Public keys are represented by PEM-encoded certificates which are signed by a trusted CA.
 Private keys are represented by a PEM-encoded private key.
-This separation of keys is considered to be the best practice in modern key management.~\todo{quelle}
+This separation of keys is considered to be the best practice in modern key management~\cite[33]{Barker2006}.
 Each user needs to have exclusive access to its private keys.
 The public keys of all users are expected to be publicly available in the system.
 The protocol further assumes that a user that participates in the system has access to its key material (e.g. via hardware token).
 
 The protocol relies on three fundamental cryptographic operations:
-Signing, encrypting and decrypting logs.
+Signing, encrypting, and decrypting logs.
 They are used to construct the full functionality of the demanded protocol.
 They allow the E2EE of logs and they can be used to share and revoke access to logs.
 The following description delivers a high-level overview of how the protocol functions.
-This is additionally visualized in figure~\ref{fig:protocol-overview}.
+This is additionally visualized in \cref{fig:protocol-overview}.
 
 \begin{enumerate}
     \item
@@ -49,7 +49,7 @@ This is additionally visualized in figure~\ref{fig:protocol-overview}.
     Thus, the protocol requires the monitor to perform two tasks.
     First, the raw log data needs to be cryptographically signed by the monitor.
     Second, the log needs to be encrypted for the data owner (only the data owner is allowed to access the log upon creation).
-    The encrypted log is finally sent to the Overseer.
+    The encrypted log is finally sent to the \emph{Safekeeper}.
     This allows the data owner to request and decrypt the log.
     The decryption process also involves validity checks of the received data.
     This ensures that the protocol was applied correctly.
@@ -81,11 +81,11 @@ To ensure that the monitor does not specify other unintended users, validation c
     \includegraphics[width=10cm]{../img/05/overview.jpg}
     \centering
     \caption[Protocol overview]{
-        The performed tasks and data flows when creating, encrypting, decrypting and sharing logs in the toolchain.
+        The performed tasks and data flows when creating, encrypting, decrypting, and sharing logs in the toolchain.
         The monitor creates a log and encrypts it for Alice.
         Alice downloads and decrypts the log.
         Alice decides to share the log with Bob.
-        Therefore, Alice re-encrypts the log and updates it in the Overseer.
+        Therefore, Alice re-encrypts the log and updates it in the \emph{Safekeeper}.
         Revoking Bob's access requires Alice to re-encrypt the log while not including Bob in the set of recipients.
     }
     \label{fig:protocol-overview}
@@ -94,21 +94,21 @@ To ensure that the monitor does not specify other unintended users, validation c
 \section{General considerations}
 \label{sec:protocol-considerations}
 In this section, general design considerations for the protocol are discussed.
-Section~\ref{sec:sign-and-encrypt} evaluates the secure combination of encryption and authentication mechanisms.
+\cref{sec:sign-and-encrypt} evaluates the secure combination of encryption and authentication mechanisms.
 To design a practical and efficient protocol, intermediate servers are dependent on metadata.
-This is elaborated in section~\ref{sec:metadata}.
-Finally, section~\ref{sec:jose-protocol} illustrates how the JOSE standard can be used to practically implement the protocol.
+This is elaborated in \cref{sec:metadata}.
+Finally, \cref{sec:jose-protocol} illustrates how the JOSE standard can be utilized to practically implement the protocol.
 
 \subsection{Secure application of encryption and authentication}
 \label{sec:sign-and-encrypt}
-In general, the protocol sends encrypted data (containing a log) to a set of recipients.
+The protocol makes encrypted logs available to a set of recipients.
 The recipients must verify the authenticity of the encrypted data because only the owner or the monitor of a log is allowed to encrypt it.
 Thus, the creator of an encrypted log is required to cryptographically sign the sent data.
-This arises the question, whether encrypted data should be signed (\emph{encrypt-then-sign}) or whether signed data should be encrypted (\emph{sign-then-encrypt}).
+This arises the question of whether encrypted data should be signed (\emph{encrypt-then-sign}) or whether signed data should be encrypted (\emph{sign-then-encrypt}).
 In general, the \emph{encrypt-then-sign} approach is considered less secure because a malicious entity could simply stripe the signature and sign the ciphertext using its secret key~\cite{Davis2001}.
-This might lead to unintended flaws in the resulting protocol~\cite[section~11.2]{Jones2015a}.
+This might lead to unintended flaws in the resulting protocol~\cite{JWT2015}.
 
-The naive \emph{sign-then-encrypt} approach, however, suffers from surreptitious forwarding in certain scenarios (details in section~\ref{sec:surreptitious-forwarding}).
+The naive \emph{sign-then-encrypt} approach, however, suffers from surreptitious forwarding in certain scenarios~\cite{Davis2001}.
 The use case of this protocol is affected by the flaw.
 Consider a log that is signed by the data owner indicating that he intentionally shared it.
 This signed log is then encrypted for a set of users.
@@ -116,19 +116,18 @@ Assume that a malicious user can decrypt the cipher because the data owner encry
 Nothing prevents him from re-encrypting the signed log for any other users.
 The problem arises because those other users can not verify if the data owner has intended to share the log with them.
 They only know that the log was signed by the data owner.
-
 This flaw can be mitigated by explicitly signing the intended recipients.
-This allows a recipient to ensure that the data was intentionally encrypted for him or her by the claimed creator.~\cite{Davis2001}
+This allows a recipient to ensure that the data was intentionally encrypted for him by the claimed creator.~\cite{Davis2001}
 
 For the protocol designed in the context of this thesis, those considerations have the following implications:
 \begin{enumerate}
     \item 
-    An encrypted log is singed by the creator along with the set of recipients.
+    An encrypted log is signed by the creator along with the set of recipients.
     Please note that the log itself is also a signed data structure.
     The log must always be signed by the monitor specified within the log to avoid the forgery of logs (security requirement~S3).
     The signature of the creator ensures that unauthorized sharing operations can be detected (security requirement~S2).
     This construction nests singed data structures into each other.
-    Details can be found in section~\ref{sec:encrypting}.
+    Details can be found in \cref{sec:encrypting}.
     \item 
     The signed data is then encrypted for the specified recipients.
     This produces the ciphertext which can only be decrypted by those recipients (security requirement~S1).
@@ -137,11 +136,11 @@ For the protocol designed in the context of this thesis, those considerations ha
 
 \subsection{Metadata}
 \label{sec:metadata}
-The logs which are exchanged between users are always encrypted.
+The exchanged logs are always encrypted.
 This affects the performance of the toolchain.
 From the perspective of intermediate servers, an encrypted log does not provide any meaningful information.
 Specifically, they do not know which users have access to a log.
-The server can not associate users with a log.
+Hence, the server can not associate a log with the authorized users.
 This introduces the following practical problems:
 \begin{enumerate}
     \item 
@@ -156,37 +155,38 @@ This introduces the following practical problems:
     Alice wants to share her log with Bob.
     Before the sharing process starts, the encrypted log is stored on the server.
     Alice re-encrypts the log under the public key of Bob.
-    She authenticates against the server and tries to update the stored log in the server.
+    She authenticates against the server and tries to update the stored log.
     The server, however, does not know if Alice is the legitimate owner of the stored log (because it can not associate users with a log).
-    Thus, the server can not allow Alice to update the stored log.
-    To avoid this, the server must know the identities of the data owners for all logs.
+    Thus, the server does not allow Alice to update her log.
+    To avoid this, the server must know the identity of the data owner for all logs.
     This can be realized by attaching the identity of the owner as metadata to the encrypted log.
 \end{enumerate}
-To avoid these problems, the set of receivers and the identity of the data owner need to be accessible without decryption.
-This data can be interpreted as routing information and must be attached as metadata to the encrypted logs.
-This allows the server to filter logs concerning a particular user.
-Moreover, the server can allow data owners to modify encrypted logs.
-This practically allows them to share and revoke access to logs.
-This construction, however, implies that the data sent over the insecure network contains the set of recipients twice (once in the metadata and once within the encrypted data).
+To mitigate these limitations, the set of receivers and the identity of the data owner must be accessible without decryption.
+This information can be interpreted as routing information and must be attached as metadata to the encrypted logs.
+It allows the server to filter logs concerning a particular user.
+Moreover, the server can allow data owners to modify their encrypted logs.
+This practically enables them to share and revoke access to logs.
+The construction, however, implies that the data sent over the insecure network contains the set of recipients twice (once in the metadata and once within the encrypted data).
 
 \subsection{Realization via JOSE}
 \label{sec:jose-protocol}
 
 A log within the current inverse transparency toolchain is represented by a JSON object.
 This motivates the usage of the \emph{JSON Object Signing and Encryption} standard (JOSE)~\cite{Barnes2014}.
-Details about it can be found in section~\ref{sec:jose}.
+Details about it can be found in \cref{sec:jose}.
 The JOSE standard can be used to cryptographically sign (JWS) and encrypt (JWE) JSON data.
 It defines multiple algorithms which can be used.
 Specifically, JWE tokens can be computed using hybrid encryption algorithms.
-Since JWS and JWE tokens can also be nested into each other, JOSE cab be used to realize the desired protocol by the following means:
+Since JWS and JWE tokens can also be nested into each other, JOSE can be used to realize the desired protocol by the following means:
 \begin{enumerate}
     \item 
     A log is a JWS token signed by the monitor.
+    It is referred to as the inner JWS token because it is nested into another JWS token.
     \item 
     To encrypt a log, the creator computes a JWS token which contains the log as a nested token.
-    The token additionally contains the set of intended recipients.
+    The token additionally contains the set of intended recipients and the identity of the owner.
     This outer JWS token is called a shared log in the context of this protocol.
-    See figure~\ref{fig:nested-jws} for a visualization of the nested tokens.
+    See \cref{fig:nested-jws} for a visualization of the nested tokens.
     \item
     The shared log is finally encrypted to obtain a JWE token.
     This token also contains the unencrypted metadata within its protected header.
@@ -207,11 +207,11 @@ Since JWS and JWE tokens can also be nested into each other, JOSE cab be used to
 \section{Creating logs}
 \label{sec:signing}
 A log is represented by a JWS token.
-It contains the identity of the owner, the identity of the monitor and further information which are relevant to identify the data access (see figure~\ref{fig:nested-jws}).
+It contains the identity of the owner, the identity of the monitor, and further information which are relevant to identify the data access (see \cref{fig:nested-jws}).
 To avoid malicious data owners manipulating or creating new logs, each log needs to be signed by the monitor specified within the log.
 To create a JWS token, the monitor requires access to its private signing key.
 A log is signed with the algorithm \verb|ES256| which relies on \verb|ECDSA| and \verb|SHA-256|.
-It is defined by the JSON Web Algorithm specification~\cite{Jones2015}.
+It is defined by the JSON Web Algorithm specification~\cite{JWA2015}.
 The log is later used as input for the encryption algorithm.
 This construction is intended to resolve security requirement S3 because it allows decrypting users to verify if the provided log was indeed created by the claimed monitor.
 
@@ -220,23 +220,23 @@ This construction is intended to resolve security requirement S3 because it allo
 The encryption algorithm requires two input parameters: A log and the set of users who are allowed to access the log.
 It can be performed either by a monitor or the data owner.
 A monitor initially encrypts the log for the data owner.
-The monitor must not include its own identity in the set of authorized users.
+The monitor must not include his own identity in the set of authorized users.
 More specifically, the set of authorized users must only contain the data owner if a monitor initially encrypts a log.
 The data owner of the log might decide to share or revoke access to a log for users later on.
 This requires the re-encryption of the log.
-The data owner must always include its own identity into the set of authorized users.
+The data owner must always include his own identity in the set of authorized users.
 The encryption algorithm outputs a JWE token which can be decrypted by the specified users.
 
 Internally, the encryption algorithm creates another JWS token.
 This token is signed with the private signing key of the user encrypting the log (e.g. the creator).
-It is called a shared log because it contains a nested log plus the set of recipients plus the identity of the creator (see figure~\ref{fig:nested-jws}).
+It is called a shared log because it contains a nested log plus the set of recipients plus the identity of the creator (see \cref{fig:nested-jws}).
 The latter allows a decrypting user to download the public key of the creator which is used to verify the shared log.
 The set of recipients is included to mitigate surreptitious forwarding.
 This construction is intended to resolve security requirement S2.
-It allows the verification if the data owner has intended to share the log with respective receiver.
+It allows to verify if the data owner has intended to share the log with a respective receiver.
  
 Once the  shared log is created, it is used to compute the final JWE token.
-This follows the \emph{sign-then-encrypt} approach elaborated in section~\ref{sec:sign-and-encrypt}.
+This follows the \emph{sign-then-encrypt} approach elaborated in \cref{sec:sign-and-encrypt}.
 The final token is computed by passing the encoded shared log as plaintext into the JWE encryption algorithm.
 The identities of recipients and the identity of the owner are passed as metadata into the protected header of the JWE token.
 The choice of used algorithms to encrypt the data implies hybrid encryption:
@@ -246,26 +246,25 @@ It is responsible for computing encrypted keys.
 For each user specified as a valid recipient, the symmetric key is encrypted under the public encryption key of the user (asymmetric encryption).
 This algorithm establishes a Diffie-Hellman secret between the creator and recipient.
 This DH-secret is finally used to encrypt the symmetric key using AES.
-Details about this approach can be found in \cite[100]{Barker2017}.
-Both algorithms are specified by the JSON Web Algorithm specification~\cite{Jones2015}.
+Details about this approach can be found in \cref{sec:evaluation-sec}.
+Both algorithms are specified by the JSON Web Algorithm specification~\cite{JWA2015}.
 The resulting JWE token contains the symmetrically encrypted log, all encrypted keys, and the protected header.
 It can only be decrypted by the specified recipients because they are the only users who can restore the symmetric encryption key.
 This is intended to resolve security requirement S1 because it effectively end-to-end encrypts a log.
-The whole encryption process is depicted in detail in the appendix~\ref{app:encryption}.
+The whole encryption process is depicted in detail in \cref{app:encryption}.
 
 \section{Decrypting logs}\label{sec:decrypting}
 
 The decryption algorithm takes a JWE token and a private decryption key as input.
 To verify the JWS tokens encoded within the JWE token, this algorithm needs to be able to dynamically resolve the identities of users to their public keys.
 
-First of all, the JWE token is parsed into its ciphertext, header and encrypted keys.
+First of all, the JWE token is parsed into its ciphertext, header, and encrypted keys.
 The JWE decryption algorithm is then applied to the cipher.
 This decrypts the ciphertext using the passed private decryption key.
 To be more precise, it tries to decrypt any of the encrypted keys provided by the JWE token.
 If this succeeds, the symmetric encryption key is accessible.
 This allows the decryption of the symmetric ciphertext which restores the shared log.
 No decryption is necessary to access the metadata because is stored in the protected header of the JWE.
-
 If the decryption is successful, the decrypting user has access to the shared log and the metadata.
 Multiple validations are necessary to ensure that the protocol is used correctly.
 If any of them fails the decryption must be aborted.
@@ -303,6 +302,6 @@ If any of them fails the decryption must be aborted.
     In this case, the set of recipients can be arbitrary.
 \end{enumerate}
 If all those validations succeed the log can be trusted.
-A visualization of the decryption process can be found in the appendix~\ref{app:encryption}
+A visualization of the decryption process can be found in \cref{app:encryption}
 
 \end{document}
