--- a/main.tex
+++ b/main.tex
@@ -13,16 +13,12 @@
 % \documentclass[twoside,de]{./zyx/mythesis}
 %% If all the front pages are annoying you, try the following
 % \documentclass[twoside,wip]{./zyx/mythesis}
+\crefname{lstlisting}{Listing}{Listings}
 
 % Add the library file for the literature references
 \addbibresource{./literature.bib}
 
 \begin{document}
-
-\todo{Abkürzungen}
-\todo{Safekeeper vs Overseer; Clotiled vs Display --> einheitlich!}
-\todo{section oder Section??}
-\todo{page numers vs section when citing??}
 
 % Cover, abstract, table of contents, etc.
 \subfile{./zyx/preface.tex}
