--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -171,8 +171,8 @@ The construction, however, implies that the data sent over the insecure network 
 \subsection{Realization via JOSE}
 \label{sec:jose-protocol}
 
-A log within the current inverse transparency toolchain is represented by a JSON object.
-This motivates the usage of the \emph{JSON Object Signing and Encryption} standard (JOSE)~\cite{Barnes2014}.
+A log within the current \emph{Inverse Transparency} toolchain is represented by a JSON object.
+This motivates the usage of the JOSE standard (JOSE)~\cite{Barnes2014}.
 Details about it can be found in \cref{sec:jose}.
 The JOSE standard can be used to cryptographically sign (JWS) and encrypt (JWE) JSON data.
 It defines multiple algorithms which can be used.
