--- a/txt/6-implemented-libraries.tex
+++ b/txt/6-implemented-libraries.tex
@@ -19,7 +19,7 @@ This is described in \cref{sec:toolchain-modifications}.
 
 The following table gives an overview of the implemented libraries.
 It includes links to the GitHub repositories and the package indexes of the programming languages where the libraries were published.
-The acronym \emph{it-crypto} stands for inverse transparency cryptography.
+The acronym \emph{it-crypto} stands for \emph{Inverse Transparency} cryptography.
 
 \begin{table}[ht]
     \centering
