--- a/txt/0-acknowledgments.tex
+++ b/txt/0-acknowledgments.tex
@@ -14,11 +14,6 @@
 
 \vspace{1cm}
 \noindent
-Iffff you you want, you can use this section to thank your supervisors, your universities or just anybody else who has helped you writing your thesis.
-But for this template, I want to abuse this section for a little request:
-I want this template to be used for as many wonderful theses as possible.
-Therefore, this template needs advertisement.
-So, please tell your colleagues and supervisors about it.
-Thank you very much for your help!
+\todo{acknowledge}
 
 \end{document}
