--- a/txt/4-overview-solutions.tex
+++ b/txt/4-overview-solutions.tex
@@ -352,7 +352,7 @@ This section exemplarily investigates the implemented protocols of Zoom, CloudSe
 The goal of this section is to demonstrate what E2EE techniques are practically used in modern applications.
 Moreover, those approaches are discussed in the context of the this thesis.
 All the following techniques have in common that they do not rely on a PKI.
-This restriction, however, does not hold in the context of this thesis because the inverse transparency toolchain is intended to be distributed in an enterprise context~\cite{Zieglmeier2021}.
+This restriction, however, does not hold in the context of this thesis because the \emph{Inverse Transparency} toolchain is intended to be distributed in an enterprise context~\cite{Zieglmeier2021}.
 This simplifies the design of the final protocol.
 
 \subsection{Zoom}
@@ -369,7 +369,7 @@ All communication is encrypted using the meeting key with an authenticated symme
 
 The protocol of Zoom is similar to the hybrid encryption described in \cref{sec:hybrid-encryption}.
 However, it can not be applied in the context of this thesis because all participating users must be online.
-This assumption does not hold in the context of the inverse transparency toolchain.
+This assumption does not hold in the context of the \emph{Inverse Transparency} toolchain.
 Specifically, a monitor needs to be able to encrypt a log for the data owner even if the data owner is offline.
 The approach of Zoom shows, however, that hybrid encryption is practically used to broadcast encrypted data to multiple receivers.
 
@@ -405,7 +405,7 @@ A session (as used in the Signal protocol) requires, however, that the exchange 
 Since the user can log in from arbitrary devices and browsers, the session key needs to be transported among those devices.
 Either the user handles this manually (this conflicts with usability) or a trusted server stores the session key (this conflicts with the notion of E2EE).
 In both ways, the requirements of this thesis can not be met.
-A possible solution to fix this is the implementation and distribution of the inverse transparency front-end as an app.
+A possible solution to fix this is the implementation and distribution of the \emph{Inverse Transparency} front-end as an app.
 This way, a secure session could be established among users and the shared secret could be securely stored in dedicated secure hardware storages which are not available in browsers.
 
 \section{Justification of hybrid encryption}
